# embassy

embassy-stm32/: CHANGELOG.md
embassy-stm32-neochrom/: Cargo.toml  README.md
embassy-stm32-neochrom/src/: color.rs  driver.rs  error.rs  ffi.rs  fmt.rs  framebuffer.rs  gpu2d_bridge.rs  lib.rs  target.rs
embassy-stm32-wpan/src/bluetooth/: mod.rs
embassy-stm32-wpan/src/wba/: ble.rs  linklayer_plat.rs  mod.rs  power_table.rs  runner.rs  util_seq.rs
embassy-stm32-wpan/src/wba/gap/: aci_gap.rs  advertiser.rs  types.rs
embassy-stm32-wpan/src/wba/gatt/: server.rs
embassy-stm32-wpan/src/wba/hci/: command.rs  event.rs  host_if.rs
embassy-stm32/src/: boot.rs  gpu2d.rs  lib.rs
embassy-stm32/src/adc/: adc4.rs  mod.rs  watchdog_adc4.rs
embassy-stm32/src/dma/gpdma/: ringbuffered.rs
embassy-stm32/src/flash/: common.rs  mod.rs  wba.rs
embassy-stm32/src/gtzc/: mod.rs
embassy-stm32/src/i2c/: v2.rs
embassy-stm32/src/pka/: mod.rs  p256.rs
embassy-stm32/src/rcc/: wba.rs
embassy-stm32/src/sau/: mod.rs
embassy-stm32/src/tamp/: mod.rs
embassy-stm32/src/wdg/: mod.rs
examples/stm32n6/: Cargo.toml  README.md  memory.x
examples/stm32wba/: Cargo.toml
examples/stm32wba6/: Cargo.toml  README_PCM.md  convert_wav.py  convert_wav.sh
tests/stm32/: Cargo.toml
tests/stm32/src/: common.rs
