[package]
name = "embassy-stm32-neochrom"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Embassy driver for ST NeoChrom GPU via NemaGFX."
keywords = ["embedded", "async", "stm32", "gpu", "neochrom"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/embassy-rs/embassy"
documentation = "https://docs.embassy.dev/embassy-stm32-neochrom"
readme = "README.md"

publish = false

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", features = ["stm32n657x0", "stub-gpu2d"] },
]

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-stm32-neochrom-v$VERSION/embassy-stm32-neochrom/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-stm32-neochrom/src/"
target = "thumbv8m.main-none-eabihf"
features = ["stm32n657x0", "stub-gpu2d"]

[package.metadata.docs.rs]
features = ["stm32n657x0", "stub-gpu2d"]

[dependencies]
embassy-stm32 = { version = "0.6.0", path = "../embassy-stm32", features = ["unstable-pac"] }
embassy-hal-internal = { version = "0.5.0", path = "../embassy-hal-internal" }
stm32-bindings = { path = "../../stm32-bindings/build/stm32-bindings", optional = true, default-features = false }
nema-gfx-hal = { path = "../../stm32-bindings/nema-gfx-hal", default-features = false }

aligned = "0.4.2"
critical-section = "1.2"

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.17", optional = true }

[features]
default = ["stub-gpu2d"]
defmt = ["dep:defmt", "embassy-hal-internal/defmt"]
log = ["dep:log"]

## Use the in-tree GPU2D HAL stub (CI / early bring-up).
stub-gpu2d = ["nema-gfx-hal/stub"]

## NemaGFX core presets (forwarded to stm32-bindings).
neochrom-m55 = ["dep:stm32-bindings", "stm32-bindings/neochrom-m55"]
neochrom-m33-revc = ["dep:stm32-bindings", "stm32-bindings/neochrom-m33-revc"]
neochrom-m33-nemapvg = ["dep:stm32-bindings", "stm32-bindings/neochrom-m33-nemapvg"]
neochrom-m7 = ["dep:stm32-bindings", "stm32-bindings/neochrom-m7"]

## Chip families
n6 = []
u5 = []
h7rs = []

stm32n657x0 = ["embassy-stm32/stm32n657x0", "neochrom-m55", "n6", "nema-gfx-hal/stm32n6"]
stm32n655x0 = ["embassy-stm32/stm32n655x0", "neochrom-m55", "n6", "nema-gfx-hal/stm32n6"]
stm32n647x0 = ["embassy-stm32/stm32n647x0", "neochrom-m55", "n6", "nema-gfx-hal/stm32n6"]

stm32u599nj = ["embassy-stm32/stm32u599nj", "neochrom-m33-revc", "u5", "nema-gfx-hal/stm32u5"]
stm32u5g9nj = ["embassy-stm32/stm32u5g9nj", "neochrom-m33-nemapvg", "u5", "nema-gfx-hal/stm32u5"]

stm32h7s7z8 = ["embassy-stm32/stm32h7s7z8", "neochrom-m7", "h7rs", "nema-gfx-hal/stm32h7rs"]
stm32h7r7z8 = ["embassy-stm32/stm32h7r7z8", "neochrom-m7", "h7rs", "nema-gfx-hal/stm32h7rs"]
